ajout scrollbar et correction form

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1,3 +1,26 @@
+/* SCROLLBAR */
+body::-webkit-scrollbar {
+    width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 0;    
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--sb-thumb-color);
+    border-radius: 10px;
+    
+}
+
+@supports not selector(::-webkit-scrollbar) {
+    body {
+    scrollbar-color: var(--sb-thumb-color)
+                    var(--sb-track-color);
+    }
+}
+
 /* DASHBOARD FORM*/
 .articlesBanner {
     height: 20vh;
